--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,59 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: 'Vera Mono';
+  src: url('/fonts/VeraMono-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  font-stretch: 100%;
+  ascent-override: 95%;
+  descent-override: 25%;
+  line-gap-override: 0%;
+}
+
+@font-face {
+  font-family: 'Vera Mono';
+  src: url('/fonts/VeraMono-Bold-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  font-stretch: 100%;
+  ascent-override: 95%;
+  descent-override: 25%;
+  line-gap-override: 0%;
+}
+
+@font-face {
+  font-family: 'Vera Mono';
+  src: url('/fonts/VeraMono-Italic-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+  font-stretch: 100%;
+  ascent-override: 95%;
+  descent-override: 25%;
+  line-gap-override: 0%;
+}
+
+@font-face {
+  font-family: 'Vera Mono';
+  src: url('/fonts/VeraMono-Bold-Italic-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+  font-stretch: 100%;
+  ascent-override: 95%;
+  descent-override: 25%;
+  line-gap-override: 0%;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-fira-sans-condensed);
-  --font-mono: var(--font-fira-code);
+  --font-sans: var(--font-vera-mono);
+  --font-mono: var(--font-vera-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -102,11 +150,10 @@
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
   --destructive-foreground: oklch(0.9702 0 0);
-  --font-fira-sans-condensed: 'Fira Sans Condensed', sans-serif;
-  --font-fira-code: 'Fira Code', monospace;
-  --font-sans: var(--font-fira-sans-condensed);
-  --font-serif: var(--font-fira-code);
-  --font-mono: var(--font-fira-code);
+  --font-vera-mono: 'Vera Mono', monospace;
+  --font-sans: var(--font-vera-mono);
+  --font-serif: var(--font-vera-mono);
+  --font-mono: var(--font-vera-mono);
   --shadow-color: #000000;
   --shadow-opacity: 0.1;
   --shadow-blur: 0.75rem;
@@ -164,12 +211,11 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
   --destructive-foreground: oklch(0.9702 0 0);
-  --font-fira-sans-condensed: 'Fira Sans Condensed', sans-serif;
-  --font-fira-code: 'Fira Code', monospace;
+  --font-vera-mono: 'Vera Mono', monospace;
+  --font-sans: var(--font-vera-mono);
+  --font-serif: var(--font-vera-mono);
+  --font-mono: var(--font-vera-mono);
   --radius: 0rem;
-  --font-sans: var(--font-fira-sans-condensed);
-  --font-serif: var(--font-fira-code);
-  --font-mono: var(--font-fira-code);
   --shadow-color: #000000;
   --shadow-opacity: 0.1;
   --shadow-blur: 0.75rem;
